# learn_ncnn

./: .gitignore  CMakeLists.txt  build.sh  data.7z  main.cpp
model_include/: ir20230815_0810mv3_shuff_0.5m_backbone_fintune_fp16.id.h  ir20231031_ir3_slim300_epoch145_fp16.id.h  ir20231031_ir3_slim300_epoch145_fp16.mem.h  ir231110_squeezenet1_1-size-256-loss-wing_loss-model_epoch-1900_fp16.id.h
src/: HandAlg.cpp  HandAlg.h  HandCommon.h  HandDet.cpp  HandLandms.cpp  HandRec.cpp  gesturebank.h  misc.cpp  misc.h
